--- a/main.css
+++ b/main.css
@@ -8,7 +8,9 @@
   border: 0;
 }
 body {
-  font-family: "Proxima Nova";
+  font-family: "proxima-nova", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .gridcontainer {
